[package]
name = "sprite"
version = "0.0.1"
authors = ["Marius Seritan <github@seritan.net>"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/compass-rs/sprite.git"
homepage = "https://github.com/compass-rs/sprite"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"
